platform/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sura-ohorizons-backstage
  namespace: backstage
  labels:
    app.kubernetes.io/component: developer-portal
    app.kubernetes.io/instance: sura-ohorizons
    app.kubernetes.io/name: backstage
    app.kubernetes.io/part-of: sura-ohorizons
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: v7.2.4
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/component: developer-portal
        app.kubernetes.io/instance: sura-ohorizons
        app.kubernetes.io/name: backstage
        app.kubernetes.io/part-of: sura-ohorizons
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/version: v7.2.4
    spec:
      automountServiceAccountToken: false
      serviceAccountName: backstage

      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: backstage
          image: ghcr.io/ohorizons/ohorizons-backstage:v7.2.4
          imagePullPolicy: IfNotPresent

          command:
            - node
            - packages/backend
            - --config
            - app-config.yaml
            - --config
            - /app/config/app-config.override.yaml

          ports:
            - name: http
              containerPort: 7007
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 90
            periodSeconds: 15

          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true

          volumeMounts:
            - name: app-config
              mountPath: /app/config
              readOnly: true
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: app-config
          configMap:
            name: backstage-app-config
        - name: tmp
          emptyDir: {}
