platform/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sura-ohorizons-backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
    app.kubernetes.io/part-of: sura-ohorizons
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backstage
  ports:
    - name: http
      port: 7007
      targetPort: 7007
      protocol: TCP
