platform/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sura-ohorizons-ingress
  namespace: backstage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: backstage.nttdatacolombia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sura-ohorizons-backstage
                port:
                  number: 7007
  tls:
    - hosts:
        - backstage.nttdatacolombia.com
      secretName: backstage-tls-letsencrypt
